--- a/App/lamp/src/index.css
+++ b/App/lamp/src/index.css
@@ -5,3 +5,7 @@ Fonts embedded from Google Fonts:
 'Playfair Display' - 400 to 900
 'Open Sans' - 300 to 800
 */
+
+h1, h2 {
+  font-family: 'Playfair Display', Helvetica, Arial, sans-serif;
+}
